feat: sair ou continuar